--- a/AplicacionInversiones/pom.xml
+++ b/AplicacionInversiones/pom.xml
@@ -61,7 +61,7 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>
-                                com.example.comunicacionentreventanas/com.example.controlador.Main
+                                com.example.comunicacionentreventanas/com.controlador.Main
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
